--- a/Invessence/modules/web/src/main/webapp/pages/custody/uob/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/uob/index.xhtml
@@ -74,7 +74,7 @@
                                 </p:panel>
 
                                 <ui:fragment rendered="true">
-                                    <div class="Container50 margin-top ">
+                                    <div class="Container50 margin-top select_item ">
                                         <div class="Container100"><span class="title_line">Sales Person Name</span></div>
                                         <p:autoComplete id="slsPrnNm" dropdown="true" value="#{uobCustodyBean.uobDataMaster.accountDetails.accountMiscDetails.salesPersonName}"
                                                         completeMethod="#{uobCustodyBean.completeRepText}" >
