--- a/Invessence/modules/web/src/main/webapp/pages/custody/uob/extAcctOpen.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/uob/extAcctOpen.xhtml
@@ -445,7 +445,7 @@
                 <div class="Container20 Responsive100 submit_acc_dtl">
                     <h:form>
                         <p:commandButton id="uobSubmitBtn"
-                                         value="Submit Account Details"
+                                         value="Next"
                                          styleClass="uob_button" disabled="#{uobCustodyBean.dsblSubmtBtn}"
                                          actionListener="#{uobpb.investnow}">
                         </p:commandButton>
