--- a/Invessence/modules/web/src/main/webapp/pages/custody/uob/newAcctOpen.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/uob/newAcctOpen.xhtml
@@ -662,7 +662,7 @@
                                                         </p:autoComplete>
                                                     </div>
                                                     <div class="acc_holder_dtl_block ">
-                                                        <div class="Container100 select_item">
+                                                        <div class="Container100 ">
                                                             <div class="Container40 Responsive100 label_opacity radio_label">
                                                                 <div class="Container60 ">
                                                                     <span class="title_line">Have Tax Identification Number?</span>
@@ -1806,7 +1806,7 @@
                 <div class="Container20 Responsive100 submit_acc_dtl">
                     <h:form>
                         <p:commandButton id="uobSubmitBtn" disabled="#{uobCustodyBean.dsblSubmtBtn}"
-                                         value="Submit Account Details"
+                                         value="Next"
                                          styleClass="uob_button"
                                          actionListener="#{uobpb.investnow}">
                         </p:commandButton>
