--- a/Invessence/modules/web/src/main/webapp/pages/custody/uob/extAcctOpen.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/uob/extAcctOpen.xhtml
@@ -214,7 +214,7 @@
                                                         </p:autoComplete>
                                                     </div>
                                                     <div class="acc_holder_dtl_block ">
-                                                        <div class="Container100 select_item">
+                                                        <div class="Container100">
                                                             <div class="Container40 Responsive100 label_opacity radio_label">
                                                                 <div class="Container60 ">
                                                                     <span class="title_line">Have Tax Identification Number?</span>
@@ -431,7 +431,7 @@
                                     <span class="ui-button-icon-center ui-icon ui-c fa fa-edit fa-chevron-left"></span>
                                 </p:commandLink>
                             </div>
-                            <div class="Container50 next_btn">
+                            <div class="Container50 next_btn save_form_btn">
 
                                 <p:commandButton id="extSave" value="Save"
                                                  update=":cstdyFrm:extAccordian"
